--- a/javascript-intro/calendar.html
+++ b/javascript-intro/calendar.html
@@ -7,24 +7,26 @@
   <link rel="stylesheet" type="text/css" href="calendar.css">
 </head>
 <body>
-<div class="output">
-  <label for="calendarmonths">Select Month:</label>
-  <select id="calendarmonths">
-    <option value="Jan">January</option>
-    <option value="Feb">February</option>
-    <option value="Mar">March</option>
-    <option value="Apr">April</option>
-    <option value="May">May</option>
-    <option value="Jun">June</option>
-    <option value="Jul">July</option>
-    <option value="Aug">August</option>
-    <option value="Sept">September</option>
-    <option value="Oct">October</option>
-    <option value="Nov">November</option>
-    <option value="Dec">December</option>
-  </select>
+  <div class="output">
+    <canvas></canvas>
+    <label for="calendarmonths">Select Month:</label>
+    <select id="calendarmonths">
+      <option value="Jan">January</option>
+      <option value="Feb">February</option>
+      <option value="Mar">March</option>
+      <option value="Apr">April</option>
+      <option value="May">May</option>
+      <option value="Jun">June</option>
+      <option value="Jul">July</option>
+      <option value="Aug">August</option>
+      <option value="Sept">September</option>
+      <option value="Oct">October</option>
+      <option value="Nov">November</option>
+      <option value="Dec">December</option>
+    </select>
     <h1></h1>
     <ul></ul>
+
   </div>
   <script src="./calendar.js"></script>
 </body>
